Fix toast notification: Hide by default and improve visibility controls

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </footer>
 
         <!-- Toast Notifications -->
-        <div id="toast" class="toast">
+        <div id="toast" class="toast" style="display: none;">
             <i class="fas fa-check-circle"></i>
             <span id="toastMessage">Operation completed successfully!</span>
         </div>
